// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`search_content tool empty results should handle no results found 1`] = `
"# Search Results for "nonexistent"

**Search Scope:** Workspace 11111
**Results Found:** 0
**More Available:** No

_No results found_"
`;

exports[`search_content tool workspace search should search across workspace with results 1`] = `
"# Search Results for "test query"

**Search Scope:** Workspace 11111
**Results Found:** 2
**More Available:** No

## Results

### Thread thread-123
**Created:** 2024-01-01 | **Creator:** Test User 1 (22222)
**Thread:** 12345
**Channel:** Test Channel (67890)

Test thread matching query

### Comment comment-456
**Created:** 2024-01-01 | **Creator:** Test User 1 (22222)
**Thread:** 12345

Test comment matching query
"
`;

exports[`search_content tool workspace search should search with filters 1`] = `
"# Search Results for "filtered"

**Search Scope:** Workspace 11111
**Results Found:** 1
**More Available:** No

## Results

### Thread thread-789
**Created:** 2024-01-01 | **Creator:** Test User 1 (22222)
**Thread:** 12345
**Channel:** Test Channel (67890)

Filtered result
"
`;
